# Hemera-Cloud

./: .gitignore  .gitmodules  README.md  interfaces.ts  protocol.md
Arm/: .gitignore  CMakeLists.txt
Arm/client/: arm_client.cpp
Arm/hw-handle/: bitstream.cpp  bitstream.h  common.h  spi.cpp  spi.h
test/: arm_test.py  spi_test.cpp
